; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/uuid/extr_uuid.c_uuid_generate_time.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/uuid/extr_uuid.c_uuid_generate_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uuid_generate_time(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = getelementptr inbounds i32, i32* %4, i64 10
  %6 = call i32 @read_node(i32* %5)
  %7 = load i32*, i32** %2, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 8
  %9 = call i32 @read_random(i32* %8, i32 2)
  %10 = call i32 (...) @read_time()
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = ashr i32 %11, 24
  %13 = load i32*, i32** %2, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* %3, align 4
  %16 = ashr i32 %15, 16
  %17 = load i32*, i32** %2, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 1
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* %3, align 4
  %20 = ashr i32 %19, 8
  %21 = load i32*, i32** %2, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 2
  store i32 %20, i32* %22, align 4
  %23 = load i32, i32* %3, align 4
  %24 = load i32*, i32** %2, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 3
  store i32 %23, i32* %25, align 4
  %26 = load i32, i32* %3, align 4
  %27 = ashr i32 %26, 40
  %28 = load i32*, i32** %2, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 4
  store i32 %27, i32* %29, align 4
  %30 = load i32, i32* %3, align 4
  %31 = ashr i32 %30, 32
  %32 = load i32*, i32** %2, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 5
  store i32 %31, i32* %33, align 4
  %34 = load i32, i32* %3, align 4
  %35 = ashr i32 %34, 56
  %36 = load i32*, i32** %2, align 8
  %37 = getelementptr inbounds i32, i32* %36, i64 6
  store i32 %35, i32* %37, align 4
  %38 = load i32, i32* %3, align 4
  %39 = ashr i32 %38, 48
  %40 = load i32*, i32** %2, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 7
  store i32 %39, i32* %41, align 4
  %42 = load i32*, i32** %2, align 8
  %43 = getelementptr inbounds i32, i32* %42, i64 6
  %44 = load i32, i32* %43, align 4
  %45 = and i32 %44, 15
  %46 = or i32 %45, 16
  %47 = load i32*, i32** %2, align 8
  %48 = getelementptr inbounds i32, i32* %47, i64 6
  store i32 %46, i32* %48, align 4
  %49 = load i32*, i32** %2, align 8
  %50 = getelementptr inbounds i32, i32* %49, i64 8
  %51 = load i32, i32* %50, align 4
  %52 = and i32 %51, 63
  %53 = or i32 %52, 128
  %54 = load i32*, i32** %2, align 8
  %55 = getelementptr inbounds i32, i32* %54, i64 8
  store i32 %53, i32* %55, align 4
  ret void
}

declare dso_local i32 @read_node(i32*) #1

declare dso_local i32 @read_random(i32*, i32) #1

declare dso_local i32 @read_time(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
